PyMaker/datas/object2/RawHTML/i17101/Python_DOC_referPages.im-receiving-the-error-except-mysqldb-error-e-syntax-error-invalid-syntax.txt
<div class="post-text" itemprop="text">
<p>Here is my pipelines.py and I'm receiving an error on line 18.</p>
<pre><code>import sys;sys.path.append("/opt/local/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages")
import MySQLdb
import hashlib
from scrapy.exceptions import DropItem
from scrapy.http import Request

class TestPipeline(object):

    def __init__(self):
        self.conn = MySQLdb.connect(user='test', passwd='password', db='c1024403', host='ephesus.cs.cf.ac.uk', charset='utf8', use_unicode=True)
        self.cursor = self.conn.cursor()

    def process_item(self, item, spider):
        try:
            self.cursor.execute("""INSERT INTO test (test1, test2) VALUES (%s, %s)""", (item['Country'], item['Qualification']))
            self.conn.commit()

        except MySQLdb.Error, e:
            print 'Error %d: %s' % (e.args[0], e.args[1])
            sys.exit(1)

        return item
</code></pre>
<p>Heres the error -   </p>
<pre><code>File "project\pipelines.py", line 18
except MySQLdb.Error, e:
     ^
SyntaxError: invalid syntax
</code></pre>
<p>I've installed mysql-python and visual c++ 2008 express, I don't understand what the error means as I can't find anything about it anywhere else on the internet. </p>
</div>
<div class="post-text" itemprop="text">
<p>You are running your code with <code>Python 3.x</code>, but your code scheme for <code>try.. except</code> section is for <code>Python 2.X</code>.</p>
<p>If you want to run your code with <code>Python 3.x</code>, then change this line:</p>
<pre><code>except MySQLdb.Error, e:
</code></pre>
<p>To:</p>
<pre><code>except MySQLdb.Error as e:
</code></pre>
<p>And if you want this section of code works with <code>Python 2.x</code> and also <code>Python 3.x</code>, then change it to:</p>
<pre><code>except MySQLdb.Error:
    e = sys.exc_info()[1]
</code></pre>
<p>Read <a href="https://docs.python.org/3/howto/pyporting.html#capturing-the-currently-raised-exception" rel="nofollow">more</a>.</p>
<p>But according to your <code>print</code> statement, you write your script for <code>Python 2.x</code>, so it's better to run your code with <code>Python 2.x</code>, instead of <code>Python 3.x</code></p>
<p>Also this <code>sys.path.append("../python2.7/site-packages")</code> line is strange in first line of your script.</p>
<p>Also your indention of your first code that you pasted was wrong, and i think your are still using that, please use current edited version that is now in your question.</p>
</div>
<span class="comment-copy">I am still receiving the same error, I literally don't know what it means, I'm running it from CMD. Can you suggest anything else that could be the problem?</span>
<span class="comment-copy">Have I forgotten to import something?</span>
<span class="comment-copy">What's the output of this command? <code>python -c "import sys;print(sys.version)"</code>?</span>
<span class="comment-copy">2.7.6 (default, Nov 10 2013, 19:24:18) [MSC v.1500 32 bit (Intel)]</span>
<span class="comment-copy">Now save this line: <code>import sys;print(sys.version)</code> to a new file like <code>get_version.py</code> and then run it as you run your <code>pipelines.py</code> script, now what's the output of <code>get_version.py</code> script?</span>
